Setup API specifications through swagger
